[fix] fix du build.gradle + Instruction de compilation et d'exécution sur le README